--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typing-effect": "^2.0.5"
