--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typing-effect": "^2.0.5"
   },
